Change editor notice bar text and settings

--- a/assets/dev/scss/helpers/variables.scss
+++ b/assets/dev/scss/helpers/variables.scss
@@ -184,7 +184,7 @@ $editor-alert-warning-bg: #fcfcfc;
 $editor-alert-info-bg: #f3fcff;
 $editor-alert-success-bg: #fcfffc;
 
-// Wordpress colors
+// WordPress colors
 $wp-warning: #ffb900;
 $wp-warning-text: #f56e28;
 
