New: Nested elements experiment [ED-2256] (#18030)

--- a/assets/dev/scss/frontend/_modules.scss
+++ b/assets/dev/scss/frontend/_modules.scss
@@ -1,2 +1,3 @@
 // Shapes Module
 @import '../../../../modules/shapes/assets/scss/frontend';
+@import '../../../../modules/tabs-v2/assets/scss/frontend';
