Fix: Insert library button is clickable while inserting a template [ED-7708]

--- a/assets/dev/scss/editor/_templates-modal.scss
+++ b/assets/dev/scss/editor/_templates-modal.scss
@@ -59,6 +59,14 @@ $remote-templates-items-space: 30px;
 	.elementor-template-library-template-insert {
 		color: #fff;
 		background-color: $editor-success;
+
+		&.elementor-disabled {
+			cursor: default;
+			pointer-events: none;
+			color: $editor-light;
+			background-color: $editor-darker;
+			transition: 0.3s;
+		}
 	}
 
 	.elementor-go-pro {
