z-index shape divider

--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -183,6 +183,10 @@
 		}
 	}
 
+	.elementor-shape {
+		z-index: 2;
+	}
+
 	// Inner Container handle.
 	// TODO: Find a better solution.
 	& > &, .elementor-widget & {
