--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -152,7 +152,7 @@
 		content: var( --background-overlay );
 		display: block;
 		position: absolute;
-		z-index: 1;
+		z-index: $ground-layer;
 		width: 100%;
 		height: 100%;
 		left: 0;
@@ -181,10 +181,6 @@
 			max-width: 100%;
 			flex-basis: 100%;
 		}
-	}
-
-	.elementor-shape {
-		z-index: 2;
 	}
 
 	// Inner Container handle.
