--- a/assets/dev/scss/frontend/_global.scss
+++ b/assets/dev/scss/frontend/_global.scss
@@ -68,7 +68,7 @@
 		left: 0;
 		position: absolute;
 		overflow: hidden;
-		z-index: $ground-layer;
+		z-index: $under-layer;
 		direction: ltr;
 	}
 
@@ -111,7 +111,7 @@
 		position: absolute;
 		width: 100%;
 		height: 100%;
-		z-index: 0;
+		z-index: $under-layer;
 		top: 0;
 		@include start(0);
 
@@ -166,7 +166,7 @@
 
 	&.elementor-absolute,
 	&.elementor-fixed {
-		z-index: 1;
+		z-index: $first-layer;
 	}
 
 	// Set to initial values in order to avoid inheritance which might cause unexpected behavior.
