--- a/assets/dev/scss/frontend/_global.scss
+++ b/assets/dev/scss/frontend/_global.scss
@@ -68,7 +68,7 @@
 		left: 0;
 		position: absolute;
 		overflow: hidden;
-		z-index: $under-layer;
+		z-index: $ground-layer;
 		direction: ltr;
 	}
 
@@ -111,7 +111,7 @@
 		position: absolute;
 		width: 100%;
 		height: 100%;
-		z-index: $under-layer;
+		z-index: $ground-layer;
 		top: 0;
 		@include start(0);
 
