--- a/assets/dev/scss/editor/panel/_element-settings.scss
+++ b/assets/dev/scss/editor/panel/_element-settings.scss
@@ -13,8 +13,7 @@
 		display: table-cell;
 
 		&.elementor-active {
-			background-image: linear-gradient(to bottom, $editor-background-light, #fff);
-			border-bottom: 3px solid $editor-accent;
+			border-bottom: 3px solid #495157;
 		}
 
 		a {
