--- a/assets/dev/scss/editor/panel/_elements.scss
+++ b/assets/dev/scss/editor/panel/_elements.scss
@@ -142,7 +142,7 @@
 #elementor-element--promotion__dialog {
 	position: absolute;
 	width: 300px;
-	z-index: 1;
+	z-index: 999999999999999999;
 	background-color: #fff;
 	box-shadow: 0 2px 15px rgba(0, 0, 0, 0.3);
 	border-radius: 3px;
