Fix: Overlay background is not visible [...] in Container (#18433, #18391) [ED-7315] (#18804)
* z-index fix

* z-index shape divider

* container layer level fixes

Co-authored-by: Hein van Vlastuin <vv@abanganimedia.co.za>

--- a/assets/dev/scss/frontend/_container.scss
+++ b/assets/dev/scss/frontend/_container.scss
@@ -152,7 +152,7 @@
 		content: var( --background-overlay );
 		display: block;
 		position: absolute;
-		z-index: 0;
+		z-index: $ground-layer;
 		width: 100%;
 		height: 100%;
 		left: 0;
@@ -161,6 +161,11 @@
 		opacity: var( --overlay-opacity );
 		transition: var( --overlay-transition );
 		border-radius: var( --border-radius );
+	}
+
+	.elementor-background-video-container,
+	.elementor-background-slideshow {
+		z-index: $under-layer;
 	}
 
 	.elementor-widget {
