--- a/assets/dev/scss/editor/preview/preview.scss
+++ b/assets/dev/scss/editor/preview/preview.scss
@@ -531,6 +531,8 @@ html.elementor-html {
 }
 
 .elementor-sortable-helper {
+	height: 84px;
+	width: 125px;
 	position: absolute;
 	border-radius: 3px;
 	background-color: #fff;
