--- a/core/kits/assets/css/panel.scss
+++ b/core/kits/assets/css/panel.scss
@@ -1,6 +1,29 @@
+.elementor-panel:not( .e-panel-docked ) #elementor-panel__header-float {
+	transform: rotate( 180deg );
+}
+
 .elementor-panel {
 
+	border-radius: 0 !important;
 	transition: opacity .3s;
+
+	&.e-panel-docked {
+		height: 100% !important;
+	}
+
+	&.e-panel-dockable {
+		&-left {
+			#elementor-panel__header-float {
+				transform: rotate( 90deg );
+			}
+		}
+
+		&-left.e-panel-docked {
+			#elementor-panel__header-float {
+				transform: rotate( -90deg );
+			}
+		}
+	}
 
 	&.e-panel-faded {
 		opacity: .4;
@@ -8,16 +31,27 @@
 
 	#elementor-panel__header {
 		position: relative;
+		background: #FFF;
 
 		#elementor-panel-header-kit-close,
 		#elementor-panel-header-kit-back {
 			display: none;
 		}
 
+		#elementor-panel-header-kit-back {
+			background: #FFF;
+		}
+
+		&.e-panel-floatable {
+			#elementor-panel__header-buttons {
+				cursor: move;
+			}
+		}
+
 		&-buttons {
-			cursor: move;
 			position: absolute;
 			display: flex;
+			align-items: center;
 			font-size: 15px;
 			inset-inline: 0;
 			top: 50%;
@@ -29,13 +63,11 @@
 			padding: 16px;
 		}
 
-		body:not(.elementor-panel-docked) &-float {
-			display: none;
+		.e-panel-left-buttons {
+			display: flex;
+			align-items: center;
+			margin-inline-end: auto;
 		}
-
-		 &-float {
-			 margin-inline-end: auto;
-		 }
 
 		&-close {
 			margin-inline-start: auto;
@@ -48,11 +80,20 @@
 	.elementor-panel {
 
 		#elementor-panel__header {
-			background-color: $editor-kit-accent;
+			//background-color: $editor-kit-accent;
+
+			#elementor-panel-header-title {
+				cursor: default !important;
+			}
+
+			#elementor-panel__header-buttons {
+				display: none;
+			}
 
 			#elementor-panel-header-kit-close,
 			#elementor-panel-header-kit-back {
 				display: table-cell;
+				background: #FFF;
 			}
 
 			@at-root body:not(.e-routes-has-history) #elementor-panel-header-kit-back {
@@ -99,7 +140,10 @@
 	}
 
 	#elementor-panel-header-add-button,
+	#elementor-panel-footer-add-widgets,
+	#elementor-panel-footer-history,
 	// #elementor-panel-header-menu-button,
+	#elementor-panel-footer-global-styles .elementor-panel-footer-sub-menu-item:not( #elementor-panel-footer-sub-menu-item-site-settings ),
 	#elementor-panel-footer-sub-menu-item-save-template,
 	#elementor-panel-footer-navigator {
 		display: none;
