--- a/assets/dev/scss/admin/admin.scss
+++ b/assets/dev/scss/admin/admin.scss
@@ -31,5 +31,5 @@
 
 // TODO - Remove - Hide nested elements experiment.
 .elementor_experiment-nested-elements {
-	display: none !important;
+	display: none;
 }
